wtx-macros/tests/ui/error_enum/bad_after_sending.stderr
error: `#[pkg::after_sending]` must be an async function named `after_sending` containing any combination of `api: &mut SomeApi`, `params: &mut SomePackageParams`, `req_bytes: &[u8]`, and `req_params: &mut SomeRequestParams`.
 --> tests/ui/error_enum/bad_after_sending.rs:3:10
  |
3 |   #[pkg::after_sending]
  |          ^^^^^^^^^^^^^
